--- a/ml_workshop.ipynb
+++ b/ml_workshop.ipynb
@@ -175,11 +175,8 @@
     "\n",
     "activation_layers = [\n",
     "            \"relu\",\n",
-    "            \"softmax\",\n",
-    "            \"softplus\",\n",
-    "            \"softsign\",\n",
     "            \"selu\",\n",
-    "            \"elu\",\n",
+    "            \"elu\"\n",
     "]\n",
     "n = random.randint(1, len(activation_layers))\n",
     "layer = activation_layers[n]\n",
@@ -577,7 +574,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -591,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
